<resources>
    <string name="app_name">WhatsApp</string>
    <string name="valida_titulo">Validação</string>
    <string name="valida_desc">
        Você recebeu um SMS para validação do seu número, digite
        o código de validação abaixo:
    </string>
    <string name="btn_validar">Validar</string>
    <string name="hint_email">Digite seu e-mail</string>
    <string name="hint_senha">Digite sua senha</string>
    <string name="cadastro_numero">Não tem conta? Cadastre-se</string>
    <string name="hint_nome">Digite o seu nome</string>
    <string name="bt_sair">Sair</string>
    <string name="acao_configuracao" translatable="false">Configurações</string>
    <string name="acao_sair" translatable="false">Sair</string>
    <string name="pesquisa" translatable="false">Pesquisar</string>
    <string name="adicionar" translatable="false">Adicionar</string>
    <string name="campo_mensagem">Mensagem</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>