<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.cursoandroid.whatsapp.MainActivity"
    >
        <item android:id="@+id/configuracao"
                android:title="@string/acao_configuracao"
                android:orderInCategory="100"
                app:showAsAction="never"/>
        <item android:id="@+id/item_sair"
                android:title="@string/acao_sair"
                android:orderInCategory="200"
                app:showAsAction="never"/>
        <item android:id="@+id/item_pesquisa"
                android:title="@string/pesquisa"
                android:orderInCategory="300"
                app:showAsAction="ifRoom"
                android:icon="@drawable/ic_baseline_search_24"/>
        <item android:id="@+id/item_adicionar"
                android:title="@string/adicionar"
                android:orderInCategory="400"
                app:showAsAction="ifRoom"
                android:icon="@drawable/ic_add_contato"/>

</menu>